<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ActividadAgregarNuevaPublicacion">

    <ScrollView
        android:layout_marginHorizontal="10dp"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="7dp"
        android:orientation="vertical">

        <TextView
            android:id="@+id/tv_add_publication_title"
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:layout_marginTop="16dp"
            android:text="@string/tv_add_publication_title"
            android:textSize="30sp" />

        <TextView
            android:id="@+id/tv_add_publication_title_text"
            android:layout_width="match_parent"
            android:layout_height="30dp"
            android:layout_margin="5dp"
            android:textSize="18sp"
            android:text="@string/caracteristica_titulo" />

        <EditText
            android:id="@+id/et_add_publication_title"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_margin="5dp"
            android:textSize="18sp"
            android:ems="10"
            android:inputType="textPersonName"
            android:text="" />

        <TextView
            android:id="@+id/tv_add_publication_select_game_text"
            android:layout_width="match_parent"
            android:layout_height="30dp"
            android:layout_margin="5dp"
            android:textSize="18sp"
            android:text="@string/caracteristica_seleccionar_juego" />

        <Spinner
            android:id="@+id/sp_add_publicacion_select_game"
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:layout_margin="10dp" />

        <TextView
            android:id="@+id/tv_add_publication_tag_text"
            android:layout_width="match_parent"
            android:layout_height="30dp"
            android:layout_margin="5dp"
            android:textSize="18sp"
            android:text="@string/tv_add_publication_tag_text" />
        <LinearLayout
            android:id="@+id/linearLayout2"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginTop="8dp"
            android:orientation="horizontal"
            android:text="M">

            <EditText
                android:id="@+id/et_add_publicacion_tag"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_margin="5dp"
                android:ems="10"
                android:layout_weight="1"
                android:inputType="textPersonName"
                android:text=""/>

            <Button
                android:id="@+id/btn_add_publication_tag_add"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/btn_add_publication_tag_add" />
        </LinearLayout>


        <TextView
            android:id="@+id/tv_add_publicacion_tags_added"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:text=""
            android:textSize="18sp" />
        <TextView
            android:id="@+id/tv_add_publicacion_description_text"
            android:layout_width="match_parent"
            android:layout_height="30dp"
            android:layout_margin="5dp"
            android:textSize="18sp"
            android:text="@string/caracteristica_descripcion"/>


        <EditText
            android:id="@+id/et_add_publicacion_description"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_margin="5dp"
            android:ems="10"
            android:inputType="textPersonName"
            android:text="" />




        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="16dp"
            android:orientation="vertical">

            <Button
                android:id="@+id/btn_add_publicacion_accept"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_weight="1"
                android:text="@string/palabra_aceptar" />

            <Button
                android:id="@+id/btn_add_publicacion_deny"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_weight="1"
                android:text="@string/palabra_cancelar" />
        </LinearLayout>

    </LinearLayout>

    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>