<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ActividadCrearGrupo">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginHorizontal="10dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <TextView
                android:id="@+id/tv_titulo_crear_grupo"
                android:layout_width="match_parent"
                android:layout_height="45dp"
                android:layout_marginTop="16dp"
                android:text="@string/tv_titulo_crear_grupo"
                android:textSize="30sp" />

            <TextView
                android:id="@+id/tv_crear_group_nombre"
                android:layout_width="match_parent"
                android:layout_height="30dp"
                android:layout_marginTop="16dp"
                android:text="@string/caracteristica_name"
                android:textSize="18sp" />

            <EditText
                android:id="@+id/et_crear_group_nombre"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_marginTop="8dp"
                android:ems="10"
                android:inputType="textPersonName"
                android:text="" />

            <TextView
                android:id="@+id/textView8"
                android:layout_width="match_parent"
                android:layout_height="30dp"
                android:layout_marginTop="16dp"
                android:text="@string/caracteristica_descripcion"
                android:textSize="18sp" />

            <EditText
                android:id="@+id/et_crear_group_descripcion"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_marginTop="8dp"
                android:ems="10"
                android:inputType="textPersonName"
                android:text="" />


            <TextView
                android:id="@+id/tv_create_group_select_game_text2"
                android:layout_width="match_parent"
                android:layout_height="30dp"
                android:layout_margin="5dp"
                android:text="@string/caracteristica_seleccionar_juego"
                android:textSize="18sp" />

            <Spinner
                android:id="@+id/sp_create_group_select_game"
                android:layout_width="match_parent"
                android:layout_height="45dp"
                android:layout_margin="10dp" />

            <TextView
                android:id="@+id/textView"
                android:layout_width="match_parent"
                android:layout_height="30dp"
                android:layout_marginTop="16dp"
                android:text="@string/caracteristica_seleccionar_img_fondo"
                android:textSize="18sp" />

            <LinearLayout
                android:id="@+id/linearLayout3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:orientation="vertical"
                android:text="M">


                <Button
                    android:id="@+id/btn_create_group_sel_img"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/palabra_seleccionar" />

                <ImageView
                    android:id="@+id/iv_create_group_img"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    tools:srcCompat="@tools:sample/avatars" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginTop="16dp"
                android:orientation="horizontal"
                app:layout_constraintEnd_toEndOf="@+id/linearLayout4"
                app:layout_constraintStart_toStartOf="@+id/linearLayout4"
                app:layout_constraintTop_toBottomOf="@+id/linearLayout4">

                <Button
                    android:id="@+id/btn_create_new_group"
                    android:layout_width="120dp"
                    android:layout_height="50dp"
                    android:layout_weight="1"
                    android:text="@string/palabra_aceptar" />

                <Button
                    android:id="@+id/btn_cancel_create_new_group"
                    android:layout_width="120dp"
                    android:layout_height="50dp"
                    android:layout_weight="1"
                    android:text="@string/palabra_cancelar" />
            </LinearLayout>

        </LinearLayout>

    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>