<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ActividadSeleccionarUbicacion">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="5dp"
        android:orientation="vertical"
        tools:layout_editor_absoluteX="192dp"
        tools:layout_editor_absoluteY="256dp">

        <TextView
            android:id="@+id/textView7"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="34dp"
            android:textAlignment="center"
            android:layout_margin="5dp"
            android:text="@string/actividad_ubicacion_ubicacion" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textView9"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:layout_margin="2dp"
                android:text="@string/actividad_ubicacion_ubicacion_actual" />

            <TextView
                android:id="@+id/tv_ubicacion_selecta"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:layout_margin="2dp"
                android:text="" />
        </LinearLayout>


        <Button
            android:id="@+id/bt_sel_ubicacion"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/palabra_seleccionar" />

        <fragment xmlns:android="http://schemas.android.com/apk/res/android"
            xmlns:map="http://schemas.android.com/apk/res-auto"
            xmlns:tools="http://schemas.android.com/tools"
            android:id="@+id/map"
            android:name="com.google.android.gms.maps.SupportMapFragment"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            tools:context=".ActividadMapa" />

    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>